# AI_aca

./: .gitignore  .watchignore  langgraph.json  pyproject.toml  readme.md
app/: main.py
app/agents/: academic_assistant.py  base.py  chart_react_agent.py  evidence_review_agent.py  literature_react_agent.py  orchestrator.py  report_agent.py  search_planner_agent.py
app/api/v1/: chat.py  oss.py
app/common/: logger.py  settings.py
app/graph/: academic_graph.py  events.py  persistence.py  runtime.py  state.py
app/models/: schemas.py
app/static/: app.js  index.html  index.txt  styles.css
app/tools/: academic_search.py
